# azure-function-app-structlog-example

./: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  host.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-build.yml
Function/: __init__.py  function.json  handlerfunction.py  main.py
azure-pipelines/: app-deploy.yml  azure-pipelines.yml
bicep-templates/: functionapp.bicep
shared_code/utils/: loggingutils.py  responseutils.py
test/: test_loggingutils.py
